--- a/.env.development
+++ b/.env.development
@@ -1,12 +1,12 @@
-REACT_APP_CHAIN_ID = "1666700000"
+REACT_APP_CHAIN_ID = "1666600000"
 
 # 10+ nodes balanced, US/EU
-REACT_APP_NODE_1 = "https://api.s0.b.hmny.io"
+REACT_APP_NODE_1 = "https://api.harmony.one"
 
 # 10+ nodes balanced, US/EU
-REACT_APP_NODE_2 = "https://api.s0.b.hmny.io"
+REACT_APP_NODE_2 = "https://api.harmony.one"
 
 # 10+ nodes balanced in each region, global
-REACT_APP_NODE_3 = "https://api.s0.b.hmny.io"
+REACT_APP_NODE_3 = "https://api.harmony.one"
 
 REACT_APP_DEBUG = true
